bk_ida/gccida/c3/insert_restore
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/caller-save.c:1087:90: error: must use 'enum' tag to refer to type 'machine_mode'
int  insert_restore(  struct insn_chain *chain, int before_p, int regno, int maxrestore, machine_mode *save_mode) 
                                                                                         ^
                                                                                         enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/caller-save.c:1138:32: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( v12 != ( ( unsigned int)( mode_class_0[v14] - 5) < 2) + 1 ) 
                               ^~~~~~~~~~~~
                               mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/caller-save.c:1153:32: error: use of undeclared identifier 'machine_mode'
v13 = adjust_address_1( v13, ( machine_mode)v14, 0LL, 1, 1); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/caller-save.c:1161:22: error: use of undeclared identifier 'machine_mode'
v15 = gen_rtx_REG( ( machine_mode)*( ( unsigned __int8 *)v13 + 2), v7); 
                     ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/insert_restore/src/obj/caller-save.o] Error 1
